functions/public/css/style.css
:root {
				--primary-color: white;
				--font-color: black;
				--invert: invert(1);
			}

			[data-theme="dark"] {
				--primary-color: #353D3F;
				--font-color: white;
				--invert: invert(0);
			}

			/* BODY */
			html, body {
					background-color: var(--primary-color);
					color: var(--font-color);
					/* font-family: 'Avantgarde', sans-serif; */
					/* Testing Apple San Francisco Font because, well.. this is my dad we're talking about. HUGE  supporter <3 */
					letter-spacing: 0px;
					font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", "Segoe UI";
					font-weight: 300;
					font-size: 19px;
					height: 200vmin;
					margin: 0;
				}

			.floating-card {
				width: 50vmin;
				height: 80vmin;
				padding: 10px;
				top: 5%;
				display: block;
				border-style: solid;
				border-color: var(--font-color);
				position: -webkit-sticky;
				position: sticky;
				float: left;
				text-align: center;
				left: 5px;
				top: 5px;
				background-color: var(--primary-color);
				color: var(--font-color);
				opacity: 1;
			}

			.floating-card a:link {
				color: inherit;
			    text-decoration: none!important;
			}

			.floating-card a:visited {
				color: inherit;
			    text-decoration: none!important;
			}

			.title {
				position: relative;
				width: 90%;
				font-size: 5vmin;
				font-style: normal;
				font-weight: 400;
				padding: 10px;
				margin: 0 0 auto;
			}


			.linkContainer {
				position: absolute;
				top: 82%;
				text-align: left;

			}

			.links {
					color: var(--font-color);
					padding: 0 25px;
					font-size: 15px;
					font-weight: 600;
					letter-spacing: .1rem;
			}


			/* TODO:
			- Adjust left and righ side margins
			- Select Font
			- Integrate Dark mode for ya boi
			- Set up simple database with one of his blog posts or something
			*/
			.main {
				float: left;
				top: 5%;
				width: 60%;
				padding: 0 20px;
				letter-spacing: 1px;
			}

			.social {
				position: absolute;
				top: 73vmin;
				right: 0;
				font-size: 20px;
				color: white;
			}

			.fa {
				padding: 10px;
				font-size: 20px;
				width: 20px;
				text-align: center;
				text-decoration: none;
				margin: 5px 2px;
				border-radius: 50%;
			}

			.fa:hover {
					opacity: 0.7;
			}

			.fa-facebook {
				background: #3B5998;
				color: white;
			}

			.fa-twitter {
				background: #55ACEE;
				color: white;
			}

			.fa-instagram {
				background: #125688;
				color: white;
			}

			.fa-send {
				background: #125688;
				color: white;
			}

			.fa-instagram {
				background: #CC3366;
				color: white;
			}

			.profile-pic {
				width: 35vmin;
				height: 45vmin;
				position: absolute;
				left: 13%;
			}

			.cover-photo {
				padding: 0 5px;
				float: left;
				width: 30vmin;
				height: 45vmin;

			}

			.about-pic {
				padding: 0 5px;
				float: left;
				width: 20vw;
				height: 25vw;
			}

			.subtitle {
				/* font-family:'Avantgarde' sans-serif; */
				font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", "Segoe UI";
				font-size: 50%;
				line-height: 0.5;
				margin: 0.5 auto;
				text-align: center;
				color: lightgrey;
			}

			@media only screen and (max-width: 768px) and (orientation: portrait) {
				/* For cell phone Viewing */
				.floating-card {
					width: 90%;
					height: 45%;
					padding: 10px;
					left: 2vw;
					position: relative;
				}

				.main {
					width: 85%;
					margin-top: 10px;
				}

				.blogDiv {
					 width: 90vw !important;
					 height: 30vw !important;

				 }

				 .blogDiv > a {
				 	font-size: 15px;
				 }

				 .blogDiv > p {
				 	font-size: 10px;
				 }

				 .backButton {
				 	width: 15vw !important;
				 	height: 5vw !important;
				 }

				.title {
					font-size: 6vw;
				}

				.subtitle {
					font-size: 4vw;
				}

				.profile-pic {
					left: 30%;
				}

				.social {
					top: 80vw;
					right: -5vw;
					font-size: 4vw;
				}

				.fa {
					width: 4vw;
					font-size: 4vw;
				}

				.linkContainer {
					left: 0;
					top: 80%;
				}

				.cover-photo {
					width: 85vw;
					height: 45%;
					padding-bottom: 5vw;
				}

			}

			@media only screen and (min-width: 768px) and (max-width: 992px) and (orientation : portrait) {
				/* For Tablets in Portrait Viewing */
				.floating-card {
					width: 90%;
					height: 40%;
					padding: 10px;
					left: 2vw;
					position: relative;
				}

				.main {
					width: 85%;
					margin-top: 10px;
				}

				.blogDiv {
					width: 90vw !important;
					height: 30vw !important;
				}

				.blogDiv > a {
				 font-size: 25px;
				}

				.blogDiv > p {
				 font-size: 15px;
				}

				.backButton {
				 	width: 10vw !important;
				 	height: 2vw !important;
				 }

				.title {
					font-size: 6vw;
				}

				.subtitle {
					font-size: 4vw;
				}

				.profile-pic {
					left: 30%;
				}

				.social {
					top: 75vw;
					right: -5vw;
					font-size: 3vw;
				}

				.fa {
					width: 3vw;
					font-size: 3vw;
				}

				.linkContainer {
					left: 0;
				}

				.cover-photo {
					width: 85vw;
					height: 45%;
					padding-bottom: 5vw;
				}

			}

			@media only screen and (max-width: 809px) and (orientation : landscape) {
					/* For Mobile Viewing */
					.floating-card {
						width: 30vw;
						height: 50vw;
						padding: 10px;
						left: 2vmin;
						position: -webkit-sticky;
					}

					.main {
						width: 45%;
						margin-top: 10px;
						margin-left: 10px;
					}

					body { margin-left: 10px; }

					.blogDiv > p {
						 font-size: 15px;
					}

					.backButton {
					 	width: 10vw !important;
				 		height: 2vw !important;
				 	}

					.title {
						font-size: 2vmin;
					}

					.subtitle {
						font-size: 1vmin;
					}

					.profile-pic {
						left: 8%;
						width: 25vmin;
						height: 30vmin;
					}

					.social {
						top: 45vmin;
						right: -1vw;
						font-size: 1vw;
					}

					.fa {
						width: 1vw;
						font-size: 1vw;
					}

					.linkContainer {
						left: 0;
						top: 41vmin;
					}

					.cover-photo {
						width: 18vw;
						height: 4%;
						padding-bottom: 1vw;
					}
				}
			}

			.header {
				/* Fix this */
				float: right;
				top: 5%;
				padding: 0 20px;
				letter-spacing: 2px;

			}

			.about {
				float: left;
				top: 5%;
				width: 60%;
				padding: 0 20px;
			}

			 .blogDiv {
				 border-radius: 25px;
				 transition: box-shadow .3s;
				 width: 30vw;
				 height: 15vw;
				 border: 1.5px solid black;
				 margin: 15px;
				 padding-top: 15px;
				 float: left;
				 text-align: center;
				 /* overflow: hidden; */
			 }

			 .blogDiv > a {
			 	padding-top: 10px;
			 }

			 .blogDiv:hover {
				 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
			 }

			 .blogHeader {
			 	position: relative;
 				top: 1px;
				left: 40%;
 				width: 30px;
 				height: 65px;
 				padding: 0px 5px;
 				font-size: 20px;
			 }

			 .backButton {
				 position: relative;
				 left: 0px;
				 bottom: 1vw;
				 display: block;
				 text-align: center;
				 width: 5vw;
				 height: 1.2vw;
				 padding: 10px;
				 margin: 2px;
				 border-radius: 45px;
				 border: 1.5px solid black;
				 font-size: 15px;
				 text-decoration: none!important;
			 }

			 .github {
			 	position: absolute;
				bottom: 0px;
				right: 0px;
			 }

			 .adminButton {
				 align: center;
				 display: flex;
				 position: absolute;
				 top: 30%;
				 left: 10vw;

			 }

			 .articleEdit {
				 border-radius: 25px;
				 transition: box-shadow .3s;
				 background: #4D90FE;
				 width: 15vw;
				 height: 5vw;
				 border: 0.5px black;
				 margin: 15px;
				 padding-top: 15px;
				 position: relative;
				 left: 12vw;
				 text-align: center;
				 cursor: pointer;
			 }

			 .articleEdit:hover {
				 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
			 }

			 .articleEdit > a {
				 text-decoration: none!important;
			 }
			 #toolbar {
				 display: none;
				 position: absolute;
				 width: 50vw;
				 left: 25vw;
				 top: 10.8vh;
				 z-index: 1;
				 background: white;
				 border-color: inherit;
			 }
			 
			 #editor {
			  display: none;
			  position: absolute;
				width: 50vw;
				height: 60vh;
				left: 25vw;
				top: 15vh;
				z-index: 1;
				background: white;
				border-color: inherit;
			 }

			 #modal {
				  display: none; /* Hidden by default */
				  position: fixed; /* Stay in place */
				  z-index: 1; /* Sit on top */
				  padding-top: 100px; /* Location of the box */
				  left: 0;
				  top: 0;
				  width: 100%; /* Full width */
				  height: 100%; /* Full height */
				  overflow: auto; /* Enable scroll if needed */
				  background-color: rgb(0,0,0); /* Fallback color */
				  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
				}

